# socat

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: pypi.yml  pytest.yml
alembic/: env.py
alembic/versions/: 35a6a33e0a34_initial_database.py
examples/: act_map.py
socat/: __init__.py  api.py  astroquery.py  core.py  database.py  generator.py  migrate.py  settings.py
socat/alembic/: env.py
socat/alembic/versions/: 1bfc5561403e_add_sso_id_time_composite_index_to_.py  35a6a33e0a34_initial_database.py  a1b2c3d4e5f6_add_monitored_field.py  b2c3d4e5f6a7_add_pointing_and_extra_fields.py  c3d4e5f6a7b8_add_monitored_pointing_flags.py
socat/api/: __init__.py  app.py  async_ses.py
socat/api/routers/: fixed_sources.py  moving_sources.py  services.py  sso.py
socat/client/: core.py  db.py  mock.py  settings.py
socat/core/: __init__.py  all_sources.py  fixed_sources.py  generator.py  moving_sources.py  services.py  sso.py
socat/database/: __init__.py  services.py  session.py  sources.py  statements.py
socat/ephem/: __init__.py  query_mpc.py  read_jpl.py
socat/ingest/: actfits.py  bulk_sqlite.py  jplparquet.py  spt.py  textingest.py  webskycsv.py
tests/: conftest.py  test_api.py  test_astroquery.py  test_bulk_sqlite.py  test_core.py  test_db_client.py  test_generator.py  test_ingest.py  test_mock.py  test_read_jpl.py  test_sso.py  test_sso_api.py  test_sso_mock.py
