[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude=["*alembic*"]

[project]
name = "socat"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel",
    "fastapi",
    "sqlalchemy[asyncio]",
    "uvicorn",
    "aiosqlite",
    "alembic",
    "pydantic_settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "testcontainers",
    "coverage",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "httpx"
]

[tool.ruff.lint]
preview = true
extend-select = ["I", "DOC501"]
# ignore = ["D417", "D400", "D200", "D103", "D102", "D101", "D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "socat"
]

[tool.coverage.report]
# Return values are not covered by tests when using async endpoints so
# we will just ignore them from the coverage report.
exclude_lines = [
    "return .*"
]